reference_sixel.h


typedef int SIXELSTATUS;
                                                  choose method for finding the largest
                                                  dimension of median cut boxes for
                                                  splitting, make sense only when -p
                                                  option (color reduction) is
                                                  specified
                                                  FINDTYPE is one of them:
                                                    auto -> choose finding method
                                                            automatically (default)
                                                    norm -> simply comparing the
                                                            range in RGB space
                                                    lum  -> transforming into
                                                            luminosities before the
                                                            comparison
                                                */
#define SIXEL_OPTFLAG_SELECT_COLOR      ('s')  
#define SIXEL_OPTFLAG_CROP              ('c')  
#define SIXEL_OPTFLAG_QUALITY           ('q')  
SIXELAPI void
sixel_allocator_ref(
    sixel_allocator_t  *allocator);
SIXELAPI void
sixel_allocator_unref(sixel_allocator_t *allocator);
SIXELAPI void *
sixel_allocator_malloc(
    sixel_allocator_t    *allocator,  
    size_t               n);          
SIXELAPI void *
sixel_allocator_calloc(
    sixel_allocator_t    *allocator,  
    size_t               nelm,        
    size_t               elsize);     
SIXELAPI void *
sixel_allocator_realloc(
    sixel_allocator_t    *allocator,  
    void                 *p,          
    size_t               n);          
SIXELAPI void
sixel_allocator_free(
    sixel_allocator_t    *allocator,  
    void                 *p);         
struct sixel_output;
typedef struct sixel_output sixel_output_t;
typedef int (* sixel_write_function)(char *data, int size, void *priv);
SIXELAPI SIXELSTATUS
sixel_output_new(
    sixel_output_t           **output,     
    sixel_write_function      fn_write,     
    void                     *priv,         
    sixel_allocator_t         *allocator);
SIXELAPI __attribute__((deprecated)) sixel_output_t *
sixel_output_create(
    sixel_write_function  fn_write, 
    void                  *priv);
SIXELAPI void
sixel_output_destroy(sixel_output_t  *output); 
SIXELAPI void
sixel_output_ref(sixel_output_t  *output);     
SIXELAPI void
sixel_output_unref(sixel_output_t  *output);   
SIXELAPI int
sixel_output_get_8bit_availability(
    sixel_output_t  *output);   
SIXELAPI void
sixel_output_set_8bit_availability(
    sixel_output_t  *output,       
    int             availability);
SIXELAPI void
sixel_output_set_gri_arg_limit(
    sixel_output_t  *output, 
    int             value);
SIXELAPI void
sixel_output_set_penetrate_multiplexer(
    sixel_output_t  *output,    
    int             penetrate);
SIXELAPI void
sixel_output_set_skip_dcs_envelope(
    sixel_output_t  *output,   
    int             skip);
SIXELAPI void
sixel_output_set_palette_type(
    sixel_output_t  *output,      
    int             palettetype);
SIXELAPI void
sixel_output_set_encode_policy(
    sixel_output_t  *output,    
    int             encode_policy);
struct sixel_dither;
typedef struct sixel_dither sixel_dither_t;
SIXELAPI SIXELSTATUS
sixel_dither_new(
    sixel_dither_t         **ppdither,  
    int                     ncolors,     
    sixel_allocator_t       *allocator);
SIXELAPI __attribute__((deprecated)) sixel_dither_t *
sixel_dither_create(int  ncolors); 
SIXELAPI sixel_dither_t *
sixel_dither_get(int builtin_dither); 
SIXELAPI void
sixel_dither_destroy(sixel_dither_t *dither); 
SIXELAPI void
sixel_dither_ref(sixel_dither_t *dither); 
SIXELAPI void
sixel_dither_unref(sixel_dither_t *dither); 
SIXELAPI SIXELSTATUS
sixel_dither_initialize(
    sixel_dither_t *dither,          
    unsigned char  *data,    
    int  width,              
    int  height,             
    int  pixelformat,        
    int  method_for_largest, 
    int  method_for_rep,     
    int  quality_mode);      
SIXELAPI void
sixel_dither_set_diffusion_type(
    sixel_dither_t  *dither,   
    int  method_for_diffuse);  
SIXELAPI int
sixel_dither_get_num_of_palette_colors(
    sixel_dither_t  *dither);  
SIXELAPI int
sixel_dither_get_num_of_histogram_colors(
    sixel_dither_t  *dither);  
SIXELAPI __attribute__((deprecated)) int 
sixel_dither_get_num_of_histgram_colors(
    sixel_dither_t  *dither);  
SIXELAPI unsigned char *
sixel_dither_get_palette(
    sixel_dither_t  *dither);  
SIXELAPI void
sixel_dither_set_palette(
    sixel_dither_t  *dither,   
    unsigned char   *palette);
SIXELAPI void
sixel_dither_set_complexion_score(
    sixel_dither_t  *dither,   
    int             score);    
SIXELAPI void
sixel_dither_set_body_only(
    sixel_dither_t  *dither,   
    int             bodyonly);
SIXELAPI void
sixel_dither_set_optimize_palette(
    sixel_dither_t  *dither,   
    int             do_opt);
SIXELAPI void
sixel_dither_set_pixelformat(
    sixel_dither_t  *dither,      
    int             pixelformat); 
SIXELAPI void
sixel_dither_set_transparent(
    sixel_dither_t  *dither,      
    int             transparent); 
typedef void * (* sixel_allocator_function)(size_t size);
SIXELAPI SIXELSTATUS
sixel_encode(
    unsigned char   *pixels,     
    int              width,      
    int              height,     
    int              depth,      
    sixel_dither_t  *dither,     
    sixel_output_t  *context);   
SIXELAPI SIXELSTATUS
sixel_decode_raw(
    unsigned char         *p,           
    int                   len,          
    unsigned char        **pixels,     
    int                  *pwidth,      
    int                  *pheight,     
    unsigned char        **palette,    
    int                  *ncolors,     
    sixel_allocator_t     *allocator);  
SIXELAPI __attribute__((deprecated)) SIXELSTATUS
sixel_decode(
    unsigned char              *sixels,    
    int                        size,       
    unsigned char             **pixels,   
    int                       *pwidth,    
    int                       *pheight,   
    unsigned char             **palette,  
    int                       *ncolors,   
    sixel_allocator_function   fn_malloc); 
SIXELAPI void
sixel_helper_set_additional_message(
    const char        *message         
);
SIXELAPI char const *
sixel_helper_get_additional_message(void);
SIXELAPI char const *
sixel_helper_format_error(
    SIXELSTATUS       status           
);
SIXELAPI int
sixel_helper_compute_depth(
    int  pixelformat 
);
SIXELAPI SIXELSTATUS
sixel_helper_normalize_pixelformat(
    unsigned char        *dst,             
    int                  *dst_pixelformat, 
    unsigned char const   *src,             
    int                   src_pixelformat,  
    int                   width,            
    int                   height            
);
SIXELAPI SIXELSTATUS
sixel_helper_scale_image(
    unsigned char        *dst,                  
    unsigned char const   *src,                  
    int                   srcw,                  
    int                   srch,                  
    int                   pixelformat,           
    int                   dstw,                  
    int                   dsth,                  
    int                   method_for_resampling, 
    sixel_allocator_t     *allocator             
);
enum imageFormat {
    FORMAT_GIF   =  0, 
    FORMAT_PNG   =  1, 
    FORMAT_BMP   =  2, 
    FORMAT_JPG   =  3, 
    FORMAT_TGA   =  4, 
    FORMAT_WBMP  =  5, 
    FORMAT_TIFF  =  6, 
    FORMAT_SIXEL =  7, 
    FORMAT_PNM   =  8, 
    FORMAT_GD2   =  9, 
    FORMAT_PSD   = 10, 
    FORMAT_HDR   = 11, 
};
enum loopControl {
    LOOP_AUTO    = 0,  
    LOOP_FORCE   = 1,  
    LOOP_DISABLE = 2,  
};
struct sixel_frame;
typedef struct sixel_frame sixel_frame_t;
SIXELAPI SIXELSTATUS
sixel_frame_new(
    sixel_frame_t        **ppframe,    
    sixel_allocator_t     *allocator);
SIXELAPI __attribute__((deprecated)) sixel_frame_t *
sixel_frame_create(void);
SIXELAPI void
sixel_frame_ref(sixel_frame_t  *frame);
SIXELAPI void
sixel_frame_unref(sixel_frame_t  *frame);
SIXELAPI SIXELSTATUS
sixel_frame_init(
    sixel_frame_t    *frame,        
    unsigned char    *pixels,       
    int              width,         
    int              height,        
    int              pixelformat,   
    unsigned char    *palette,      
    int              ncolors        
);
SIXELAPI unsigned char *
sixel_frame_get_pixels(sixel_frame_t  *frame);  
SIXELAPI unsigned char *
sixel_frame_get_palette(sixel_frame_t  *frame);  
SIXELAPI int
sixel_frame_get_width(sixel_frame_t  *frame);  
SIXELAPI int
sixel_frame_get_height(sixel_frame_t  *frame);  
SIXELAPI int
sixel_frame_get_ncolors(sixel_frame_t  *frame);  