reference_bindings.rs

extern "C" {
    pub fn sixel_allocator_ref(allocator: *mut sixel_allocator_t);
}
extern "C" {
    pub fn sixel_allocator_unref(allocator: *mut sixel_allocator_t);
}
extern "C" {
    pub fn sixel_allocator_malloc(allocator: *mut sixel_allocator_t, n: usize)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn sixel_allocator_calloc(allocator: *mut sixel_allocator_t,
                                  nelm: usize, elsize: usize)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn sixel_allocator_realloc(allocator: *mut sixel_allocator_t,
                                   p: *mut ::std::os::raw::c_void, n: usize)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn sixel_allocator_free(allocator: *mut sixel_allocator_t,
                                p: *mut ::std::os::raw::c_void);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sixel_output([u8; 0]);
pub type sixel_output_t = sixel_output;
pub type sixel_write_function =
    ::std::option::Option<unsafe extern "C" fn(data:
                                                   *mut ::std::os::raw::c_char,
                                               size: ::std::os::raw::c_int,
                                               priv_:
                                                   *mut ::std::os::raw::c_void)
                              -> ::std::os::raw::c_int>;
extern "C" {
    pub fn sixel_output_new(output: *mut *mut sixel_output_t,
                            fn_write: sixel_write_function,
                            priv_: *mut ::std::os::raw::c_void,
                            allocator: *mut sixel_allocator_t) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_output_create(fn_write: sixel_write_function,
                               priv_: *mut ::std::os::raw::c_void)
     -> *mut sixel_output_t;
}
extern "C" {
    pub fn sixel_output_destroy(output: *mut sixel_output_t);
}
extern "C" {
    pub fn sixel_output_ref(output: *mut sixel_output_t);
}
extern "C" {
    pub fn sixel_output_unref(output: *mut sixel_output_t);
}
extern "C" {
    pub fn sixel_output_get_8bit_availability(output: *mut sixel_output_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_output_set_8bit_availability(output: *mut sixel_output_t,
                                              availability:
                                                  ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_output_set_gri_arg_limit(output: *mut sixel_output_t,
                                          value: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_output_set_penetrate_multiplexer(output: *mut sixel_output_t,
                                                  penetrate:
                                                      ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_output_set_skip_dcs_envelope(output: *mut sixel_output_t,
                                              skip: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_output_set_palette_type(output: *mut sixel_output_t,
                                         palettetype: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_output_set_encode_policy(output: *mut sixel_output_t,
                                          encode_policy:
                                              ::std::os::raw::c_int);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sixel_dither([u8; 0]);
pub type sixel_dither_t = sixel_dither;
extern "C" {
    pub fn sixel_dither_new(ppdither: *mut *mut sixel_dither_t,
                            ncolors: ::std::os::raw::c_int,
                            allocator: *mut sixel_allocator_t) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_dither_create(ncolors: ::std::os::raw::c_int)
     -> *mut sixel_dither_t;
}
extern "C" {
    pub fn sixel_dither_get(builtin_dither: ::std::os::raw::c_int)
     -> *mut sixel_dither_t;
}
extern "C" {
    pub fn sixel_dither_destroy(dither: *mut sixel_dither_t);
}
extern "C" {
    pub fn sixel_dither_ref(dither: *mut sixel_dither_t);
}
extern "C" {
    pub fn sixel_dither_unref(dither: *mut sixel_dither_t);
}
extern "C" {
    pub fn sixel_dither_initialize(dither: *mut sixel_dither_t,
                                   data: *mut ::std::os::raw::c_uchar,
                                   width: ::std::os::raw::c_int,
                                   height: ::std::os::raw::c_int,
                                   pixelformat: ::std::os::raw::c_int,
                                   method_for_largest: ::std::os::raw::c_int,
                                   method_for_rep: ::std::os::raw::c_int,
                                   quality_mode: ::std::os::raw::c_int)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_dither_set_diffusion_type(dither: *mut sixel_dither_t,
                                           method_for_diffuse:
                                               ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_dither_get_num_of_palette_colors(dither: *mut sixel_dither_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_dither_get_num_of_histogram_colors(dither:
                                                        *mut sixel_dither_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_dither_get_num_of_histgram_colors(dither:
                                                       *mut sixel_dither_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_dither_get_palette(dither: *mut sixel_dither_t)
     -> *mut ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn sixel_dither_set_palette(dither: *mut sixel_dither_t,
                                    palette: *mut ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn sixel_dither_set_complexion_score(dither: *mut sixel_dither_t,
                                             score: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_dither_set_body_only(dither: *mut sixel_dither_t,
                                      bodyonly: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_dither_set_optimize_palette(dither: *mut sixel_dither_t,
                                             do_opt: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_dither_set_pixelformat(dither: *mut sixel_dither_t,
                                        pixelformat: ::std::os::raw::c_int);
}
extern "C" {
    pub fn sixel_dither_set_transparent(dither: *mut sixel_dither_t,
                                        transparent: ::std::os::raw::c_int);
}
pub type sixel_allocator_function =
    ::std::option::Option<unsafe extern "C" fn(size: usize)
                              -> *mut ::std::os::raw::c_void>;
extern "C" {
    pub fn sixel_encode(pixels: *mut ::std::os::raw::c_uchar,
                        width: ::std::os::raw::c_int,
                        height: ::std::os::raw::c_int,
                        depth: ::std::os::raw::c_int,
                        dither: *mut sixel_dither_t,
                        context: *mut sixel_output_t) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_decode_raw(p: *mut ::std::os::raw::c_uchar,
                            len: ::std::os::raw::c_int,
                            pixels: *mut *mut ::std::os::raw::c_uchar,
                            pwidth: *mut ::std::os::raw::c_int,
                            pheight: *mut ::std::os::raw::c_int,
                            palette: *mut *mut ::std::os::raw::c_uchar,
                            ncolors: *mut ::std::os::raw::c_int,
                            allocator: *mut sixel_allocator_t) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_decode(sixels: *mut ::std::os::raw::c_uchar,
                        size: ::std::os::raw::c_int,
                        pixels: *mut *mut ::std::os::raw::c_uchar,
                        pwidth: *mut ::std::os::raw::c_int,
                        pheight: *mut ::std::os::raw::c_int,
                        palette: *mut *mut ::std::os::raw::c_uchar,
                        ncolors: *mut ::std::os::raw::c_int,
                        fn_malloc: sixel_allocator_function) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_helper_set_additional_message(message:
                                                   *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn sixel_helper_get_additional_message()
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sixel_helper_format_error(status: SIXELSTATUS)
     -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn sixel_helper_compute_depth(pixelformat: ::std::os::raw::c_int)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_helper_normalize_pixelformat(dst:
                                                  *mut ::std::os::raw::c_uchar,
                                              dst_pixelformat:
                                                  *mut ::std::os::raw::c_int,
                                              src:
                                                  *const ::std::os::raw::c_uchar,
                                              src_pixelformat:
                                                  ::std::os::raw::c_int,
                                              width: ::std::os::raw::c_int,
                                              height: ::std::os::raw::c_int)
     -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_helper_scale_image(dst: *mut ::std::os::raw::c_uchar,
                                    src: *const ::std::os::raw::c_uchar,
                                    srcw: ::std::os::raw::c_int,
                                    srch: ::std::os::raw::c_int,
                                    pixelformat: ::std::os::raw::c_int,
                                    dstw: ::std::os::raw::c_int,
                                    dsth: ::std::os::raw::c_int,
                                    method_for_resampling:
                                        ::std::os::raw::c_int,
                                    allocator: *mut sixel_allocator_t)
     -> SIXELSTATUS;
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum imageFormat {
    FORMAT_GIF = 0,
    FORMAT_PNG = 1,
    FORMAT_BMP = 2,
    FORMAT_JPG = 3,
    FORMAT_TGA = 4,
    FORMAT_WBMP = 5,
    FORMAT_TIFF = 6,
    FORMAT_SIXEL = 7,
    FORMAT_PNM = 8,
    FORMAT_GD2 = 9,
    FORMAT_PSD = 10,
    FORMAT_HDR = 11,
}
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum loopControl { LOOP_AUTO = 0, LOOP_FORCE = 1, LOOP_DISABLE = 2, }
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct sixel_frame([u8; 0]);
pub type sixel_frame_t = sixel_frame;
extern "C" {
    pub fn sixel_frame_new(ppframe: *mut *mut sixel_frame_t,
                           allocator: *mut sixel_allocator_t) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_frame_create() -> *mut sixel_frame_t;
}
extern "C" {
    pub fn sixel_frame_ref(frame: *mut sixel_frame_t);
}
extern "C" {
    pub fn sixel_frame_unref(frame: *mut sixel_frame_t);
}
extern "C" {
    pub fn sixel_frame_init(frame: *mut sixel_frame_t,
                            pixels: *mut ::std::os::raw::c_uchar,
                            width: ::std::os::raw::c_int,
                            height: ::std::os::raw::c_int,
                            pixelformat: ::std::os::raw::c_int,
                            palette: *mut ::std::os::raw::c_uchar,
                            ncolors: ::std::os::raw::c_int) -> SIXELSTATUS;
}
extern "C" {
    pub fn sixel_frame_get_pixels(frame: *mut sixel_frame_t)
     -> *mut ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn sixel_frame_get_palette(frame: *mut sixel_frame_t)
     -> *mut ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn sixel_frame_get_width(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_height(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn sixel_frame_get_ncolors(frame: *mut sixel_frame_t)
     -> ::std::os::raw::c_int;
}
